--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,35 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.coolbanter.kikoba">
-    <uses-permission android:name="android.permission.INTERNET">
 
-    </uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:persistent="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Kikoba">
-        <activity android:name=".ListActivity">
+        <activity android:name=".views.EditProfileActivity"></activity>
+        <activity android:name=".setup.data.signup.SignUpActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-
-
         </activity>
-        <activity android:name=".InsertActivity">
-
-
-
-
-
-
-        </activity>
+        <activity
+            android:name=".setup.data.login.LoginActivity"
+            android:label="@string/title_activity_login"></activity>
+        <activity android:name=".setup.ProfileActivity" />
+        <activity android:name=".DatePickerActivity" />
+        <activity android:name=".views.EditActivity" />
+        <activity android:name=".views.ListActivity"></activity>
+        <activity android:name=".views.InsertActivity" />
     </application>
 
 </manifest>
